--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<h1><strong>Olly</strong></h1>
-<h3>I <em>love</em><h3>
-<h2>You!</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Happy Valentine's Day</title>
+  </head>
+  <body>
+    <h1><strong>Olly</strong></h1>
+    <h3>I <em>love</em><h3>
+    <h2>You!</h2>
+  </body
+</html>
