--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Happy Valentine's Day</title>
-    <link href="/file.css" type="text/css" rel="stylesheet">
+    <link href="/olly.css.rtf" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1><strong>Olly</strong></h1>
