--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <link href="olly.css.rtf" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1 style="color: red;"><strong>Olly</strong></h1>
+    <style> h1,
+    h2,
+    h3 {
+     color: red;
+     font-family: sans-serif;
+     text-align: center;
+    }
+    h1 {
+      font-size: 50px;
+      }
+    </style>
+    <h1><strong>Olly</strong></h1>
     <h3>I <em>love</em><h3>
     <h2>You!</h2>
   </body
