--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     
     <p>I think you're <em>Soup</em>er.</br>Never <em>Lego</em> of me.</br><em>Pees</em> always be mine.</br>When I'm with you,</br>
-I feel a <em>Mile High</em>May you shine <em>Bright-on</em></br>Valentine's Day!</p>
+I feel a <em>Mile High</em>.</br>May you shine <em>Bright-on</em></br>Valentine's Day!</p>
     
     <div id="cadre">
       <h1><strong>Olly</strong></h1>
