--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
      color: red;
      font-family: sans-serif;
      text-align: center;
+     width: 100px;
+     height: 100px;
     }
       
     p {
@@ -21,6 +23,8 @@
       padding: 5px;
       border: 3px solid red;
       border-radius: 10px;
+      width: 100px;
+      height: 200px;
       }
       
     .cadre {
