--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      color: red;
      font-family: sans-serif;
      text-align: center;
-     width: 100px;
+     width: 200px;
     }
       
     p {
@@ -29,6 +29,7 @@
      padding: 5px;
      border: 3px solid red;
      border-radius: 10px;
+     border-width: 200px;
      }
      
     </style>
