--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      padding: 5px;
      border: 3px solid red;
      border-radius: 10px;
-     border-width: 200px;
+     width: 200px;
      }
      
     </style>
