--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <body>
     
     <style> 
+      
+    h1 {
+      height:50px;
+      }
+     h2 {
+      height:40px;
+      }
+       h3 {
+      height:30px;
+      }
     h1,
     h2,
     h3 {
