--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ I feel a <em>Mile High</em>.</br>May you shine <em>Bright-on</em></br>Valentine'
 
     <div class="cadre">
       <h1><strong>Olly</strong></h1>
-      <h3>I <em>love</em><h3>
+      <h3>I <em>love</em></h3>
       <h2>You!</h2>
     </div>
   </body
