--- a/index.html
+++ b/index.html
@@ -7,20 +7,12 @@
     
     <style> 
       
-    h1 {
-      height:10px;
-      }
-     h2 {
-      height:10px;
-      }
-       h3 {
-      height:10px;
-      }
     h1,
     h2,
     h3 {
      color: red;
      font-family: sans-serif;
+     word-spacing: 30em;
      text-align: center;
      width: 200px;
     }
