--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     h3 {
      color: red;
      font-family: sans-serif;
-     word-spacing: 30em;
      text-align: center;
      width: 200px;
     }
@@ -41,8 +40,8 @@ I feel a <em>Mile High</em>.</br>May you shine <em>Bright-on</em></br>Valentine'
 
     <div class="cadre">
       <h1><strong>Olly</strong></h1>
-      <h3>I <em>love</em></h3>
-      <h2>You!</h2>
+      <h1>I <strong>love</strong></h1>
+      <h1>You!</h1>
     </div>
   </body
 </html>
