--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style> 
     
     h1 {
-      font-weight: 300;
+      font-weight: 400;
       }
       
     h1,
@@ -43,7 +43,7 @@
 I feel a <em>Mile High</em>.</br>May you shine <em>Bright-on</em></br>Valentine's Day!</p>
 
     <div class="cadre">
-      <h1><strong>Olly</strong></h1>
+      <h1>Olly</h1>
       <h1>I <strong>love</strong></h1>
       <h1>You!</h1>
     </div>
