--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       border: 3px solid red;
       border-radius: 10px;
       width: 200px;
+      position: center;
       }
       
     .cadre {
@@ -35,6 +36,7 @@
      border: 3px solid red;
      border-radius: 10px;
      width: 200px;
+     position: center;
      }
      
     </style>
