--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       border: 3px solid red;
       border-radius: 10px;
       width: 200px;
-      position: center;
+      position: relative;
+      right: 300px;
       }
       
     .cadre {
