--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     }
     h1.one {
       text-align: center;
-      
        }
     p {
       font-family: sans-serif;
@@ -27,7 +26,6 @@
       border-radius: 10px;
       width: 200px;
       }
-      
     .cadre {
      padding: 5px;
      border: 3px solid blue;
@@ -42,6 +40,10 @@
     <h1>Jeff <em>Who</em>?</h1>
     <p>Philantropist Jeff Bezos is the founder of <a href="https://amazon.com">Amazon.com</a> 
       and currently holds the <strong>richest man in the world</strong> title.</p>
+    <br/>
+    <p>He is worth:</p>
+    <h3>$134,800,000,000.00</h3>
+
 
     <div class="cadre">
       <h1>Age</h1>
