--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       border-radius: 10px;
       width: 200px;
       }
-    .cadre {
+    .cadre,
+    .minus{
      padding: 5px;
      border: 3px solid blue;
      border-radius: 10px;
@@ -41,9 +42,10 @@
     <p>Philantropist Jeff Bezos is the founder of <a href="https://amazon.com">Amazon.com</a> 
       and currently holds the <strong>richest man in the world</strong> title.</p>
     <br/>
-    <p>He is worth:</p>
-    <h3>$134,800,000,000.00</h3>
-
+    <div class="minus">
+      <p>He is worth:</p>
+      <h3>$134,800,000,000.00</h3>
+    </div>
 
     <div class="cadre">
       <h1>Age</h1>
