--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       border-radius: 10px;
       width: 200px;
       }
+    #p {
+      font-family: sans-serif;
+      text-align: center;
+      color: green;
+      }
     .cadre,
     .minus{
      padding: 5px;
@@ -43,7 +48,7 @@
       and currently holds the <strong>richest man in the world</strong> title.</p>
     <br/>
     <div class="minus">
-      <p>He is worth:</p>
+      <p id="p">He is worth:</p>
       <h3>$134,800,000,000.00</h3>
     </div>
 
