--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <title>Jeff Bezos</title>
      <style> 
+    body {
+      background-color: yellow;
+      opacity: 0.3;
+       }
     h1 {
       font-weight: 400;
       }    
