--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      }
     </style>
   </head>
-  <body style="background-color: yellow;">
+  <body style="background-color: yellow; opacity: 0.2;">
     <h1 class="one"> Jeff Bezos </h1>
    
     <h2>Jeff <em>Who</em>?</h2>
