--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Jeff Bezos</title>
      <style> 
     body {
-      background-color: yellow;
       opacity: 0.3;
        }
     h1 {
@@ -44,7 +43,7 @@
      }
     </style>
   </head>
-  <body style="background-color: yellow; opacity: 0.2;">
+  <body style="background-color: yellow;">
     <h1 class="one"> Jeff Bezos </h1>
    
     <h2>Jeff <em>Who</em>?</h2>
