--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      }
     </style>
   </head>
-  <body style="background-color: yellow;">
+  <body style="background-color: rgb(fa,fa,d2);">
     <h1 class="one"> Jeff Bezos </h1>
    
     <h2>Jeff <em>Who</em>?</h2>
