--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Jeff Bezos</title>
      <style> 
     body {
-      opacity: 0.1;
-      z-index: 0;
+      z-index: 1;
        }
     h1 {
       font-weight: 400;
@@ -44,7 +43,7 @@
      }
     </style>
   </head>
-  <body style="background-color: rgb(fa,fa,d2);">
+  <body style="background-color: rgb(fa,fa,d2); z-index: 0;">
     <h1 class="one"> Jeff Bezos </h1>
    
     <h2>Jeff <em>Who</em>?</h2>
