--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Jeff Bezos</title>
      <style> 
     body {
+      z-index: 0;
+       }
+    div {
       z-index: 1;
        }
     h1 {
