--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
       border-radius: 10px;
       width: 200px;
       }
-    #p {
-      font-family: sans-serif;
-      text-align: center;
-      color: green;
-      }
     .cadre,
     .minus{
      padding: 5px;
@@ -54,7 +49,7 @@
       and currently holds the <strong>richest man in the world</strong> title.</p>
     <br/>
     <div class="minus">
-      <p id="p">He is worth:</p>
+      <h6>He is worth:</h6>
       <h3>$134,800,000,000.00</h3>
     </div>
 
