Update and rename home to home.html

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <body>
       <div class="one">
         <h1>Jeff Bezos</h1>
-        <a img="../jeffbezos.jpg">
+        <img src="../jeffbezos.jpg" href="jeff bezos.html">
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
