--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
+        <img src="billgates.jpg" width="400px">
       </div>
       <div class="three">
         <h1>Jack Ma</h1>
+        <img src="jackma.jpg" width="400px">
       </div>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
+        <img src="markzuckerberg.jpg" width="400px">
       </div>
       <div class="five">
         <h1>Warren Buffett</h1>
+        <img src="warrenbuffett.jpg" width="400px">
       </div>
     </body>
     
