--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="three">
         <h1>Jack Ma</h1>
-        <img src="jackma.jpg" width="400px">
+        <img src="jackma2.jpg" width="400px">
       </div>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
