--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
       <div class="one">
         <h1>Jeff Bezos</h1>
-        <img src="jeffbezos2.jpg" width="400px" height="235" href="jeffbezos.html">
+        <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
