--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
       <div class="one">
-        <h1>Jeff Bezos</h1>
+        <h1 href="jeffbezos.html">Jeff Bezos</h1>
         <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
       </div>
       <div class="two">
