--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
+        <a href="billgates.html"><h1>Bill Gates</h1></a>
         <img src="billgates.jpg" width="400px">
       </div>
       <div class="three">
         <h1>Jack Ma</h1>
+        <a href="jackma.html"><h1>Jack Ma</h1></a>
         <img src="jackma2.jpg" width="400px">
       </div>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
+        <a href="markzuckerberg.html"><h1>Mark Zuckerberg</h1></a>
         <img src="markzuckerberg.jpg" width="400px">
       </div>
       <div class="five">
         <h1>Warren Buffett</h1>
+        <a href="warrenbuffett.html"><h1>Warren Buffett</h1></a>
         <img src="warrenbuffett.jpg" width="400px">
       </div>
     </body>
