--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
     
     <body>
       <div class="one">
-        <a href="jeffbezos.html"><h1>Jeff Bezos</h1></a>
+        <h1>Jeff Bezos</h1>
+        <a href="jeffbezos.html">More about Jeff</a>
         <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
-        <a href="billgates.html"><h1>Bill Gates</h1></a>
+        <a href="billgates.html">More about Bill</a>
         <img src="billgates.jpg" width="400px">
       </div>
       <div class="three">
         <h1>Jack Ma</h1>
-        <a href="jackma.html"><h1>Jack Ma</h1></a>
+        <a href="jackma.html">More about Jack</a>
         <img src="jackma2.jpg" width="400px">
       </div>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
-        <a href="markzuckerberg.html"><h1>Mark Zuckerberg</h1></a>
+        <a href="markzuckerberg.html">More about Mark</a>
         <img src="markzuckerberg.jpg" width="400px">
       </div>
       <div class="five">
         <h1>Warren Buffett</h1>
-        <a href="warrenbuffett.html"><h1>Warren Buffett</h1></a>
+        <a href="warrenbuffett.html">More about Warren</a>
         <img src="warrenbuffett.jpg" width="400px">
       </div>
     </body>
