--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <body>
       <div class="one">
         <h1>Jeff Bezos</h1>
-        <a href="jeffbezos.html">More about Jeff</a>
         <br/>
         <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          Amazon.com. Now the second largest company in the world. Jeff has become the richest man in the world.</p>
+        <br/>
+        <a href="jeffbezos.html">More about Jeff</a>
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
