--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h1>Jeff Bezos</h1>
         <br/>
         <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          Amazon.com. Now the second largest company in the world. Jeff has become the richest man in the world.</p>
+        <p width="400px">After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
         <br/>
         <a href="jeffbezos.html">More about Jeff</a>
       </div>
