--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <head>
       <title>Coolest Billionaires</title>
       <style>
-      
+        p {
+          font-family: Arial, sans-serif;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
       </style>
     </head>
     
