--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <title>Coolest Billionaires</title>
       <style>
         p {
+          width: 400px;
           font-family: Arial, sans-serif;
           padding: 10px;
           border: 3px solid black;
