--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
           border: 3px solid black;
           border-radius: 5px;
         }
+        img {
+          border: 3px solid black;
+          border-radius: 5px;
+        }
       </style>
     </head>
     
