--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
       <title>Coolest Billionaires</title>
       <style>
         p {
-          width: 384px;
+          width: 400px;
           font-family: Arial, sans-serif;
-          padding: 10px;
-          border: 3px solid black;
-          border-radius: 5px;
         }
-        img {
+        div.one {
+          padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
         }
