--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           font-family: Arial, sans-serif;
         }
         div.one {
+          width: 400px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
