--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
           width: 400px;
           font-family: Arial, sans-serif;
         }
+        img {
+          border: 3px solid black;
+          border-radius: 5px;
+        }
         div.one {
           width: 400px;
           padding: 10px;
