--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
           border: 3px solid black;
           border-radius: 5px;
         }
-        div.one {
+        div.one
+        div.two
+        div.three
+        div.four
+        div.five {
           width: 405px;
           padding: 10px;
           border: 3px solid black;
