--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
           border: 3px solid black;
           border-radius: 5px;
         }
-        div.one
-        div.two
-        div.three
-        div.four
-        div.five {
+        div.one {
           width: 405px;
           padding: 10px;
           border: 3px solid black;
