--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
     <head>
       <title>Coolest Billionaires</title>
-      <style>
+      <style id="other">
         p {
           width: 400px;
           font-family: Arial, sans-serif;
@@ -12,7 +12,33 @@
           border: 3px solid black;
           border-radius: 5px;
         }
+      </style>
+      <style id="div">
         div.one {
+          width: 405px;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
+        div.two {
+          width: 405px;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
+        div.three {
+          width: 405px;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
+        div.four {
+          width: 405px;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
+        div.five {
           width: 405px;
           padding: 10px;
           border: 3px solid black;
