--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
           border: 3px solid black;
           border-radius: 5px;
           margin-top: 10px;
-          
+        }
+        div.one,
+        div.two {
+          display: inline;
         }
       </style>
     </head>
