--- a/index.html
+++ b/index.html
@@ -65,27 +65,35 @@
       </div>
       <div class="two">
         <h1>Bill Gates</h1>
-        <a href="billgates.html">More about Bill</a>
-        <br/>
         <img src="billgates.jpg" width="400px">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
+        <a href="billgates.html">More about Bill</a>
       </div>
       <div class="three">
         <h1>Jack Ma</h1>
-        <a href="jackma.html">More about Jack</a>
-        <br/>
         <img src="jackma2.jpg" width="400px">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
+        <a href="jackma.html">More about Jack</a>
       </div>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
-        <a href="markzuckerberg.html">More about Mark</a>
-        <br/>
         <img src="markzuckerberg.jpg" width="400px">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
+        <a href="markzuckerberg.html">More about Mark</a>
       </div>
       <div class="five">
         <h1>Warren Buffett</h1>
-        <a href="warrenbuffett.html">More about Warren</a>
-        <br/>
         <img src="warrenbuffett.jpg" width="400px">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
+        <a href="warrenbuffett.html">More about Warren</a>
       </div>
     </body>
     
