--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <div class="two">
         <h1>Bill Gates</h1>
         <img src="billgates.jpg" width="400px">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
-          Jeff has become the richest man in the world.</p>
+        <p>Bill left Harvard in 1975 to, with the help of Paul Allen, found 
+          <a href="https://microsoft.com">Microsoft</a>. Now the fourth largest company in the world. 
+          He retained the richest man title for 18 years before being surpassed by Jeff last October.</p>
         <a href="billgates.html">More about Bill</a>
       </div>
       <div class="three">
