--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
         div.two {
           width: 405px;
-          padding: 10px blue;
+          padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
           margin-top: 10px;
