--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </style>
       <style id="div">
         div.one {
+          background-color: blue;
           width: 405px;
           padding: 10px;
           border: 3px solid black;
