--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           border-radius: 5px;
         }
         div.two {
-          background-color: green;
+          background-color: pale green;
           width: 405px;
           padding: 10px;
           border: 3px solid black;
