--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           
         }
         div.four {
-          background-color: #f08080;
+          background-color: #ffa07a;
           width: 405px;
           padding: 10px;
           border: 3px solid black;
