--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     </head>
     
     <body>
+      <table>
+        <td>
       <div class="one">
         <h1>Jeff Bezos</h1>
         <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
@@ -68,6 +70,8 @@
           Jeff has become the richest man in the world.</p>
         <a href="jeffbezos.html">More about Jeff</a>
       </div>
+        </td>
+        <td>
       <div class="two">
         <h1>Bill Gates</h1>
         <img src="billgates.jpg" width="400px">
@@ -76,6 +80,8 @@
           He retained the richest man title for 18 years before being surpassed by Jeff last October.</p>
         <a href="billgates.html">More about Bill</a>
       </div>
+        </td>
+        <td>
       <div class="three">
         <h1>Jack Ma</h1>
         <img src="jackma2.jpg" width="400px">
@@ -84,6 +90,8 @@
           Jeff has become the richest man in the world.</p>
         <a href="jackma.html">More about Jack</a>
       </div>
+        </td>
+        <td>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
         <img src="markzuckerberg.jpg" width="400px">
@@ -92,6 +100,8 @@
           Jeff has become the richest man in the world.</p>
         <a href="markzuckerberg.html">More about Mark</a>
       </div>
+        </td>
+        <td>
       <div class="five">
         <h1>Warren Buffett</h1>
         <img src="warrenbuffett.jpg" width="400px">
@@ -100,6 +110,8 @@
           Jeff has become the richest man in the world.</p>
         <a href="warrenbuffett.html">More about Warren</a>
       </div>
+        </td>
+      </table>
     </body>
     
   </html>
