--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         div.one {
           background-color: #87cefa;
           width: 405px;
+          height: 500px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
