--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         div.two {
           background-color: #98fb98;
           width: 405px;
+          height: 455px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
@@ -34,6 +35,7 @@
         div.three {
           background-color: #ffffe0;
           width: 405px;
+          height: 455px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
@@ -43,6 +45,7 @@
         div.four {
           background-color: #ffa07a;
           width: 405px;
+          height: 455px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
@@ -52,6 +55,7 @@
         div.five {
           background-color: #d8bfd8;
           width: 405px;
+          height: 455px;
           padding: 10px;
           border: 3px solid black;
           border-radius: 5px;
