--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
           width: 400px;
           font-family: Arial, sans-serif;
         }
+        h1,
+        h4 {
+          font-family: Arial, sans-serif;
+        }
+        h1.pagetitle {
+          font-family: Arial, sans-serif;
+          font-size: 50px;
+        }
         img {
           border: 3px solid black;
           border-radius: 5px;
@@ -58,6 +66,8 @@
     </head>
     
     <body>
+      <h1 class="pagetitle">Most Awesome Billionaires</h1>
+      <h4>In My Opinion...</h4>
       <table>
         <tr>
         <td>
