--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
           Jeff has become the richest man in the world.</p>
         <a href="warrenbuffett.html">More about Warren</a>
       </div>
+      <div class="six">
+        <h1>Richard Branson</h1>
+        
+      </div>
         </td>
         </tr>
       </table>
