--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
           border: 3px solid black;
           border-radius: 5px;
         }
+        div.six {
+          background-color: #ffc0cb;
+          width: 405px;
+          height: 455px;
+          padding: 10px;
+          border: 3px solid black;
+          border-radius: 5px;
+        }
       </style>
     </head>
     
@@ -123,7 +131,11 @@
       </div>
       <div class="six">
         <h1>Richard Branson</h1>
-        
+        <img src="richardbranson.jpg" width="400px">
+        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
+          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
+          Jeff has become the richest man in the world.</p>
+        <a href="richardbranson.html">More about Richard</a>
       </div>
         </td>
         </tr>
