--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <td>
       <div class="one">
         <h1>Jeff Bezos</h1>
-        <img src="jeffbezos2.jpg" width="400px" href="jeffbezos.html">
+        <img src="jeffbezos2.jpg" width="400px" height="240">
         <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
           <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
           Jeff has become the richest man in the world.</p>
@@ -91,7 +91,7 @@
         <td>
       <div class="two">
         <h1>Bill Gates</h1>
-        <img src="billgates.jpg" width="400px">
+        <img src="billgates.jpg" width="400px" height="240">
         <p>Bill left Harvard in 1975 to, with the help of Paul Allen, found 
           <a href="https://microsoft.com">Microsoft</a>. Now the fourth largest company in the world. 
           He retained the richest man title for 18 years before being surpassed by Jeff last October.</p>
@@ -101,7 +101,7 @@
         <td>
       <div class="three">
         <h1>Jack Ma</h1>
-        <img src="jackma2.jpg" width="400px">
+        <img src="jackma2.jpg" width="400px" height="240">
         <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
           <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
           Jeff has become the richest man in the world.</p>
@@ -113,7 +113,7 @@
         <td>
       <div class="four">
         <h1>Mark Zuckerberg</h1>
-        <img src="markzuckerberg.jpg" width="400px">
+        <img src="markzuckerberg.jpg" width="400px" height="240">
         <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
           <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
           Jeff has become the richest man in the world.</p>
@@ -123,7 +123,7 @@
         <td>
       <div class="five">
         <h1>Warren Buffett</h1>
-        <img src="warrenbuffett.jpg" width="400px">
+        <img src="warrenbuffett.jpg" width="400px" height="240">
         <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
           <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
           Jeff has become the richest man in the world.</p>
@@ -133,7 +133,7 @@
         <td>
       <div class="six">
         <h1>Richard Branson</h1>
-        <img src="richardbranson.jpg" width="400px">
+        <img src="richardbranson.jpg" width="400px" height="240">
         <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
           <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
           Jeff has become the richest man in the world.</p>
