--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
       <div class="six">
         <h1>Richard Branson</h1>
         <img src="richardbranson.jpg" width="400px" height="240">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
-          Jeff has become the richest man in the world.</p>
+        <p>At 16 he founded his first business, "Student" magazine. He then went on to found many businesses, starting with
+          a record company. The proud owner and founder of 
+          <a href="https://virgin.com">Virgin</a>. Known for his interpersonal skills, Branson is regarded one of the 
+        nicest entrepreneurs.</p>
         <a href="richardbranson.html">More about Richard</a>
       </div>
         </td>
