--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       <div class="three">
         <h1>Jack Ma</h1>
         <img src="jackma2.jpg" width="400px" height="240">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
-          Jeff has become the richest man in the world.</p>
+        <p>A Chinese business magnate, he founded 
+          <a href="https://alibaba.com">Alibaba</a> in 1999. The little known platform remains the most used wholesale
+        marketplace from China to other countries. A way to export products in bulk to retailers.</p>
         <a href="jackma.html">More about Jack</a>
       </div>
         </td>
