--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <img src="richardbranson.jpg" width="400px" height="240">
         <p>At 16 he founded his first business, "Student" magazine. He then went on to found many businesses, starting with
           a record company. The proud owner and founder of 
-          <a href="https://virgin.com">Virgin</a>. Known for his interpersonal skills, Branson is regarded one of the 
+          <a href="https://virgin.com">Virgin</a>. Branson is one of the 
         nicest entrepreneurs.</p>
         <a href="richardbranson.html">More about Richard</a>
       </div>
