--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
       <div class="four">
         <h1>Mark Zuckerberg</h1>
         <img src="markzuckerberg.jpg" width="400px" height="240">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
-          Jeff has become the richest man in the world.</p>
+        <p>At 19, he built the first modern day social media platform, 
+          <a href="https://facebook.com">Facebook.com</a>, from his university dorm. As it grew, Mark left Harvard 
+          University became the youngest billionaire ever.</p>
         <a href="markzuckerberg.html">More about Mark</a>
       </div>
         </td>
