--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
       <div class="five">
         <h1>Warren Buffett</h1>
         <img src="warrenbuffett.jpg" width="400px" height="240">
-        <p>After quitting his high paying Wall Street job in 1994, Jeff founded an online book store. 
-          <a href="https://amazon.com">Amazon.com</a>. Now the second largest company in the world. 
-          Jeff has become the richest man in the world.</p>
+        <p>Since 1970, he has been CEO of 
+          <a href="https://berkshirehathaway.com">Berkshire Hathaway</a>. An company that invests in other companies. Warren
+        has made a name for himselt as the most succesful investor, becoming the second richest man for seevral years.</p>
         <a href="warrenbuffett.html">More about Warren</a>
       </div>
         </td>
