--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <img src="warrenbuffett.jpg" width="400px" height="240">
         <p>Since 1970, he has been CEO of 
           <a href="https://berkshirehathaway.com">Berkshire Hathaway</a>. An company that invests in other companies. Warren
-        has made a name for himselt as the most succesful investor, becoming the second richest man for seevral years.</p>
+        has made a name for himselt as the most succesful investor, becoming the second richest man for years.</p>
         <a href="warrenbuffett.html">More about Warren</a>
       </div>
         </td>
