--- a/billgates.html
+++ b/billgates.html
@@ -4,11 +4,42 @@
     <head>
       <title> @ </title>
       <style>
+        h1 {
+          font-family: Arial, sans-serif;
+          text-align: justify;
+        }
+        div.earlylife {
+          font-family: Arial, sans-serif;
+          text-align: justify;
+          }
       </style>
     </head>
     
     <body>
       <h1>Bill Gates</h1>
+    <div class="earlylife">
+      <h2>Early Life</h2>
+      <p>Bill Gates was born William Henry Gates III on <em>October 28, 1955</em>, in Seattle, Washington. </p>
+      <p>Bill Gates grew up in an upper middle-class family with his older sister, Kristianne, and younger 
+        sister, Libby. Their father, William H. Gates Sr., was a promising, if somewhat shy, law student when 
+        he met his future wife, Mary Maxwell. She was an athletic, outgoing student at the University of 
+        Washington, actively involved in student affairs and leadership. The Gates family atmosphere was warm
+        and close, and all three children were encouraged to be competitive and strive for excellence. Bill 
+        showed early signs of competitiveness when he coordinated family athletic games at their summer house on
+        Puget Sound. He also relished in playing board games (Risk was his favorite) and excelled at Monopoly. 
+
+        Bill had a very close relationship with his mother, Mary, who after a brief career as a teacher devoted 
+        her time to helping raise the children and working on civic affairs and with charities. She also served
+        on several corporate boards, including those of the First Interstate Bank in Seattle (founded by her 
+        grandfather), the United Way and International Business Machines (IBM). She would often take Bill along 
+        when she volunteered in schools and at community organizations.</p>
+      <p>Bill was a voracious reader as a child, spending many hours poring over reference books such as the 
+        encyclopedia. Around the age of 11 or 12, Bill's parents began to have concerns about his behavior. He 
+        was doing well in school, but he seemed bored and withdrawn at times, and his parents worried he might
+        become a loner. Though they were strong believers in public education, when Bill turned 13, they enrolled
+        him at Seattle's exclusive preparatory Lakeside School. He blossomed in nearly all his subjects, excelling
+        in math and science, but also doing very well in drama and English.</p>
+    </div>
     </body>
     
   </html>
