--- a/billgates.html
+++ b/billgates.html
@@ -7,10 +7,12 @@
         h1 {
           font-family: Arial, sans-serif;
           text-align: justify;
+          width: 1000px;
         }
         div.earlylife {
           font-family: Arial, sans-serif;
           text-align: justify;
+          width: 1000px;
           }
       </style>
     </head>
